--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,15 @@ body {
   padding: 24px;
   gap: 24px;
 }
+
+.note {
+  height: 200px;
+  box-sizing: border-box;
+  padding: 16px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.15);
+  resize: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+}
